fixed backfrom popup view

--- a/Add to Stackd/FadingAlertView.xib
+++ b/Add to Stackd/FadingAlertView.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" restorationIdentifier="AlertView" id="iN0-l3-epB" customClass="AlertView" customModule="Add_to_Stackd" customModuleProvider="target">
+        <view contentMode="scaleToFill" restorationIdentifier="AlertView" id="iN0-l3-epB" customClass="FadingAlertView" customModule="Add_to_Stackd" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="155" height="200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
             <subviews>
