--- a/StackdVersion1/Base.lproj/Main.storyboard
+++ b/StackdVersion1/Base.lproj/Main.storyboard
@@ -463,59 +463,6 @@
             </objects>
             <point key="canvasLocation" x="357.60000000000002" y="151.57421289355324"/>
         </scene>
-        <!--Archive View Controller-->
-        <scene sceneID="GXn-XL-Onh">
-            <objects>
-                <viewController storyboardIdentifier="archiveVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="UNS-8K-LOo" customClass="ArchiveViewController" customModule="StackdVersion1" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="pk1-Ht-bQn">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XCM-n2-u7s">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="regularcell" rowHeight="120" id="yEB-as-zbr" customClass="SharedTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="120"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yEB-as-zbr" id="YCo-iw-sxx">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="youtubecell" rowHeight="120" id="mP6-rz-S48" customClass="YoutubeTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="148" width="375" height="120"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mP6-rz-S48" id="HIK-TD-Xx1">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="UNS-8K-LOo" id="HXz-T5-AbE"/>
-                                    <outlet property="delegate" destination="UNS-8K-LOo" id="E6m-hF-Jc5"/>
-                                </connections>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="XCM-n2-u7s" firstAttribute="top" secondItem="pk1-Ht-bQn" secondAttribute="top" id="2SV-5m-Xw9"/>
-                            <constraint firstItem="XCM-n2-u7s" firstAttribute="leading" secondItem="jio-8G-QDa" secondAttribute="leading" id="Abc-eV-Y99"/>
-                            <constraint firstItem="jio-8G-QDa" firstAttribute="bottom" secondItem="XCM-n2-u7s" secondAttribute="bottom" id="RPN-cI-JwJ"/>
-                            <constraint firstItem="jio-8G-QDa" firstAttribute="trailing" secondItem="XCM-n2-u7s" secondAttribute="trailing" id="RyE-eb-Iat"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="jio-8G-QDa"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="hHW-Ih-BDv"/>
-                    <connections>
-                        <outlet property="tableView" destination="XCM-n2-u7s" id="3Te-zK-74g"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lg9-bn-qDj" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="358" y="909"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="UvE-IM-YYv">
             <objects>
@@ -531,12 +478,67 @@
                     </tabBar>
                     <connections>
                         <segue destination="Ibm-LX-SoS" kind="relationship" relationship="viewControllers" id="MCa-gl-fJI"/>
-                        <segue destination="cjh-XV-ixL" kind="relationship" relationship="viewControllers" id="CoR-YL-HfR"/>
+                        <segue destination="8Nj-iS-qHL" kind="relationship" relationship="viewControllers" id="7Y1-Px-YiG"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ycc-sq-aJ9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1855" y="806"/>
+        </scene>
+        <!--Archive View Controller-->
+        <scene sceneID="ZYb-Gd-bE3">
+            <objects>
+                <viewController id="b9v-qk-uUE" customClass="ArchiveViewController" customModule="StackdVersion1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Y7U-5I-Xng">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xCZ-I9-mV1">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" red="0.94509803920000002" green="0.94509803920000002" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="regularcell" rowHeight="120" id="7xz-F6-GjC" customClass="SharedTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7xz-F6-GjC" id="TZE-Ly-vo1">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" red="0.94509803920000002" green="0.94509803920000002" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="youtubecell" rowHeight="120" id="YmV-gW-LyA" customClass="YoutubeTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="148" width="375" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YmV-gW-LyA" id="gUZ-4W-ZLx">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" red="0.94509803920000002" green="0.94509803920000002" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="b9v-qk-uUE" id="pWy-IL-fBc"/>
+                                    <outlet property="delegate" destination="b9v-qk-uUE" id="gmV-GF-R1D"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.94509803920000002" green="0.94509803920000002" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="cKJ-9Z-UQi" firstAttribute="bottom" secondItem="xCZ-I9-mV1" secondAttribute="bottom" id="2kI-RL-WsW"/>
+                            <constraint firstItem="xCZ-I9-mV1" firstAttribute="top" secondItem="cKJ-9Z-UQi" secondAttribute="top" id="6sl-4N-Z48"/>
+                            <constraint firstItem="xCZ-I9-mV1" firstAttribute="leading" secondItem="cKJ-9Z-UQi" secondAttribute="leading" id="72v-UP-wv7"/>
+                            <constraint firstItem="cKJ-9Z-UQi" firstAttribute="trailing" secondItem="xCZ-I9-mV1" secondAttribute="trailing" id="zCf-xx-ULX"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="cKJ-9Z-UQi"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Ai8-mU-aGV"/>
+                    <connections>
+                        <outlet property="tableView" destination="xCZ-I9-mV1" id="7tx-2R-wBo"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xpy-Nt-bdG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="145" y="840"/>
         </scene>
         <!--List-->
         <scene sceneID="42V-aI-Gbh">
@@ -558,23 +560,23 @@
             <point key="canvasLocation" x="-394" y="153"/>
         </scene>
         <!--Archive-->
-        <scene sceneID="6m3-Fs-HQA">
+        <scene sceneID="e54-yy-fLm">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cjh-XV-ixL" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Archive" image="tabbar_archive" id="uJZ-H0-2Zq"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8Nj-iS-qHL" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Archive" image="tabbar_archive" id="Lk1-XE-OFE"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="evi-GY-gDJ">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KFP-uQ-jCV">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="UNS-8K-LOo" kind="relationship" relationship="rootViewController" id="Lzj-MO-Dx6"/>
+                        <segue destination="b9v-qk-uUE" kind="relationship" relationship="rootViewController" id="u2r-Cb-JnN"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xA2-uD-Aeb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SKn-V9-kX7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-394" y="909"/>
+            <point key="canvasLocation" x="-783" y="840"/>
         </scene>
     </scenes>
     <resources>
