--- a/Add to Stackd/FadingAlertView.xib
+++ b/Add to Stackd/FadingAlertView.xib
@@ -5,6 +5,8 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,34 +14,31 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" restorationIdentifier="AlertView" id="iN0-l3-epB" customClass="FadingAlertView" customModule="Add_to_Stackd" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="155" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stackd" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lhw-UL-zEj">
-                    <rect key="frame" x="10" y="150" width="135" height="40"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="40" id="0MK-rf-WbF"/>
-                    </constraints>
+                    <rect key="frame" x="10" y="93" width="100" height="26.5"/>
                     <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="22"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="confirm_action" translatesAutoresizingMaskIntoConstraints="NO" id="Ma9-iX-754">
-                    <rect key="frame" x="17.5" y="25" width="120" height="100"/>
+                    <rect key="frame" x="36" y="25" width="48" height="48"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="100" id="DG8-wB-4Y2"/>
-                        <constraint firstAttribute="width" constant="120" id="Q9G-km-Vc1"/>
+                        <constraint firstAttribute="width" secondItem="Ma9-iX-754" secondAttribute="height" multiplier="1:1" id="E9P-ur-fto"/>
                     </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="Ma9-iX-754" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="25" id="7q6-aM-8gg"/>
+                <constraint firstItem="Ma9-iX-754" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="4:10" id="Bek-Im-UcV"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Lhw-UL-zEj" secondAttribute="trailing" constant="10" id="JNM-JD-h3C"/>
                 <constraint firstItem="Lhw-UL-zEj" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="TKf-SQ-TO0"/>
+                <constraint firstItem="Lhw-UL-zEj" firstAttribute="top" secondItem="Ma9-iX-754" secondAttribute="bottom" constant="20" id="Zcc-lH-fat"/>
                 <constraint firstItem="Ma9-iX-754" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Zqk-xT-fv6"/>
                 <constraint firstItem="Lhw-UL-zEj" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="bMn-tJ-qDv"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Lhw-UL-zEj" secondAttribute="bottom" constant="10" id="dwf-kc-IGh"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
