--- a/StackdVersion1/Base.lproj/Main.storyboard
+++ b/StackdVersion1/Base.lproj/Main.storyboard
@@ -526,6 +526,7 @@
                     <connections>
                         <segue destination="Ibm-LX-SoS" kind="relationship" relationship="viewControllers" id="MCa-gl-fJI"/>
                         <segue destination="8Nj-iS-qHL" kind="relationship" relationship="viewControllers" id="7Y1-Px-YiG"/>
+                        <segue destination="OII-4M-gAy" kind="relationship" relationship="viewControllers" id="neH-r3-qxe"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ycc-sq-aJ9" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -587,6 +588,95 @@
             </objects>
             <point key="canvasLocation" x="178" y="1321"/>
         </scene>
+        <!--Setting View Controller-->
+        <scene sceneID="z4a-uv-x20">
+            <objects>
+                <viewController id="IX8-gb-MbH" customClass="SettingViewController" customModule="StackdVersion1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zBG-79-xCu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="setting_stackd" translatesAutoresizingMaskIntoConstraints="NO" id="SAC-7c-2BN">
+                                <rect key="frame" x="65" y="134" width="245" height="108"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Where the most interesting content is always at the top of your list" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bky-gL-NcC" userLabel="Description Label">
+                                <rect key="frame" x="25" y="282" width="325" height="55"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="xmw-b7-Dxj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gz6-zz-pyc">
+                                <rect key="frame" x="35" y="397" width="305" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="orI-zG-CdF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <state key="normal" title="Let us know how we are doing!" backgroundImage="archive_background">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBound" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="PMy-iv-joR">
+                                <rect key="frame" x="90" y="497" width="195" height="91"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="E0X-7L-CgC">
+                                        <rect key="frame" x="0.0" y="0.0" width="195" height="51.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Version" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qkm-Uq-PHK">
+                                                <rect key="frame" x="67.5" y="0.0" width="60" height="29"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eat-IL-eos">
+                                                <rect key="frame" x="86" y="31" width="23" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="2018 Stackd" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ao4-7U-1um">
+                                        <rect key="frame" x="0.0" y="71.5" width="195" height="19.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="bky-gL-NcC" firstAttribute="leading" secondItem="egw-mK-EtD" secondAttribute="leading" constant="25" id="2cT-5x-vrK"/>
+                            <constraint firstItem="PMy-iv-joR" firstAttribute="top" secondItem="Gz6-zz-pyc" secondAttribute="bottom" constant="55" id="CtN-Ck-VRf"/>
+                            <constraint firstItem="SAC-7c-2BN" firstAttribute="top" secondItem="egw-mK-EtD" secondAttribute="top" constant="70" id="KxR-MB-E14"/>
+                            <constraint firstItem="bky-gL-NcC" firstAttribute="top" secondItem="SAC-7c-2BN" secondAttribute="bottom" constant="40" id="MZC-nI-Fvu"/>
+                            <constraint firstItem="egw-mK-EtD" firstAttribute="trailing" secondItem="PMy-iv-joR" secondAttribute="trailing" constant="90" id="OjD-a0-G8R"/>
+                            <constraint firstItem="Gz6-zz-pyc" firstAttribute="leading" secondItem="egw-mK-EtD" secondAttribute="leading" constant="35" id="WH6-YM-kPe"/>
+                            <constraint firstItem="egw-mK-EtD" firstAttribute="bottom" secondItem="PMy-iv-joR" secondAttribute="bottom" constant="30" id="Yae-rN-97r"/>
+                            <constraint firstItem="egw-mK-EtD" firstAttribute="trailing" secondItem="SAC-7c-2BN" secondAttribute="trailing" constant="65" id="aek-L2-my3"/>
+                            <constraint firstItem="Gz6-zz-pyc" firstAttribute="top" secondItem="bky-gL-NcC" secondAttribute="bottom" constant="60" id="hox-xl-mPm"/>
+                            <constraint firstItem="egw-mK-EtD" firstAttribute="trailing" secondItem="bky-gL-NcC" secondAttribute="trailing" constant="25" id="ri8-Xf-s5N"/>
+                            <constraint firstItem="SAC-7c-2BN" firstAttribute="leading" secondItem="egw-mK-EtD" secondAttribute="leading" constant="65" id="rtO-73-hd7"/>
+                            <constraint firstItem="PMy-iv-joR" firstAttribute="leading" secondItem="egw-mK-EtD" secondAttribute="leading" constant="90" id="uVd-Fk-TYD"/>
+                            <constraint firstItem="egw-mK-EtD" firstAttribute="trailing" secondItem="Gz6-zz-pyc" secondAttribute="trailing" constant="35" id="uWa-AP-AO3"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="egw-mK-EtD"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="KtV-1l-xNa"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="keU-9F-vV7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="119" y="2190"/>
+        </scene>
         <!--List-->
         <scene sceneID="42V-aI-Gbh">
             <objects>
@@ -625,13 +715,35 @@
             </objects>
             <point key="canvasLocation" x="-825" y="1295"/>
         </scene>
+        <!--Setting-->
+        <scene sceneID="Vk0-Rj-7Ce">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OII-4M-gAy" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Setting" image="tabbar_setting" id="Ea1-LZ-L3p"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5Al-8g-Vyh">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="IX8-gb-MbH" kind="relationship" relationship="rootViewController" id="d0Z-dC-Qdf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3R3-xr-vVL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-826" y="2190"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="archive_background" width="256" height="75"/>
         <image name="back_grey" width="13" height="20"/>
         <image name="cancel" width="14" height="14"/>
         <image name="popup_archive" width="31" height="25"/>
         <image name="popup_delete" width="25" height="25"/>
+        <image name="setting_stackd" width="128" height="108"/>
         <image name="tabbar_archive" width="25" height="25"/>
         <image name="tabbar_list" width="25" height="21"/>
+        <image name="tabbar_setting" width="26" height="25"/>
     </resources>
 </document>
